--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@radix-ui/colors": "^0.1.8",
     "@stitches/react": "^1.2.8",
+    "jotai": "^1.7.0",
     "next": "^12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
